# Aegis

./: .gitignore  README.md  TESTING_GUIDE.md  detect_os.sh
.github/: FUNDING.yml  GITHUB_CONFIGURATION.md  markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  installation_issue.md
.github/workflows/: ci.yml  dependency-review.yml  documentation.yml  installer-tests.yml  release.yml
aegis-agent/: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt
aegis-agent/internal/agent/: credentials.py  id.py
aegis-agent/internal/analysis/: __init__.py  command_rules.py  engine.py  rules.py
aegis-agent/internal/collector/: command_collector.py  journald_linux.py  mac_unified.py  process_monitor.py  windows_event.py
aegis-agent/internal/forwarder/: forwarder.py
aegis-agent/internal/metrics/: collector.py
aegis-agent/internal/storage/: sqlite.py
aegis-agent/scripts/: aegis-agent.service  cleanup.py  run_agent.sh  test_command_logging.py
aegis-dashboard/: .env.example  .gitignore  eslint.config.js  netlify.toml  package-lock.json  package.json  vite.config.ts
aegis-dashboard/src/: App.tsx  index.css
aegis-ml-engine/: .gitignore  README.md  compare_methods.py  config.yaml  demo.py  predict.py  requirements.txt  test_attacks.py  train_model.py  visualize.py
aegis-ml-engine/models/: config_20251118_031056.json
aegis-ml-engine/scripts/: README.md  clean_data.py
aegis-ml-engine/src/: __init__.py  anomaly_detector.py  (+2 more)
aegis-server/: .env.example  .gitignore  Dockerfile  Makefile  aegis-manage.py  main.py  pyproject.toml  railway.toml  requirements.txt  vercel.json
aegis-server/internal/analysis/: baseline_engine.py  correlation.py  incident_aggregator.py  rules_config.py
aegis-server/internal/auth/: jwt.py  permissions.py  security.py
aegis-server/internal/config/: config.py
aegis-server/internal/ml/: data_exporter.py  ml_detector.py
aegis-server/internal/storage/: init_db.py  postgres.py
aegis-server/internal/utils/: cleanup_task.py  json.py
aegis-server/models/: latest_config.json  metrics.py  models.py
aegis-server/routers/: agent_alerts.py  alert_triage.py  alerts.py  auth.py  baselines.py  commands.py  device.py  device_status.py  incidents.py  ingest.py  metrics.py  ml_data.py  ml_detection.py  processes.py  query.py  user_management.py  websocket.py
aegis-server/scripts/: add_alerts_and_incidents_tables.sql  add_device_status.sql  add_metrics_table.sql  add_missing_indexes.sql  add_rbac_schema.sql  cleanup_logs.py  cleanup_old_data.py  cleanup_retention.py  clear_invitations.sql  generate_invitation.py  register_device_helper.py  reset_users.py  test_hashing.py  train_behavioral_model.py
aegis-server/scripts/migrations/: add_device_assignments.sql  add_processes_table.sql
installers/: README.md
(+35 files in other folders)
