[project]
name = "aegis-agent"
version = "0.1.0"
description = "Aegis SIEM Agent Component"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C4",  # comprehensions
    "SIM", # simplify
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]

ignore = [
    "UP035",  # Ignore deprecation warnings for typing imports temporarily
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py files
"internal/collector/mac_unified.py" = ["F401"]  # Temporarily ignore unused imports
"internal/forwarder/forwarder.py" = ["F401"]  # Temporarily ignore unused imports
"internal/storage/sqlite.py" = ["F401"]  # Temporarily ignore unused imports
"main.py" = ["F401"]  # Temporarily ignore unused imports

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["win32.*", "systemd.*", "psutil.*", "distro.*"]
ignore_missing_imports = true