[project]
name = "aegis-server"
version = "0.1.0"
description = "Aegis SIEM Server Component"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C4",  # comprehensions
    "SIM", # simplify
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]

ignore = [
    "UP035",  # Ignore deprecation warnings for typing imports temporarily
    "B008",   # Allow function calls in argument defaults (FastAPI pattern)
    "B904",   # Allow raise without from (FastAPI exception pattern)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py files

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["uvicorn.*", "asyncpg.*"]
ignore_missing_imports = true